support cas v7 - wip